--- a/NovoePokolenie/Views/Group/Edit.cshtml
+++ b/NovoePokolenie/Views/Group/Edit.cshtml
@@ -46,7 +46,9 @@
 id="triggerLink"
 data-ajax="true"
 data-ajax-mode="replace"
-data-ajax-update="#attendance-block"> 
+data-ajax-update="#attendance-block"
+data-ajax-begin="startWait()"
+data-ajax-success="endWait()"> 
 </a>
 
 <script>
