--- a/NovoePokolenie/Views/Payment/PaymentStudentCard.cshtml
+++ b/NovoePokolenie/Views/Payment/PaymentStudentCard.cshtml
@@ -1,6 +1,6 @@
 ﻿@model NPUser
 @{
-    Layout = "~/Views/Shared/_LayoutNew.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @{
     long GetDebt(NPUser student)
