--- a/NovoePokolenie/Views/Shared/_Layout.cshtml
+++ b/NovoePokolenie/Views/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a asp-action="UsersMenu" asp-controller="Manager" class="icon-link">
+                    <a asp-action="NotActiveUsers" asp-controller="Student" class="icon-link">
                         <i class="fas fa-users"></i>
                         <span class="hidden-span"><span>Пользователи</span></span>
                     </a>
